# dayrally

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
Casks/: dayrally.rb
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: DayRally.icns
src-tauri/migrations/: 0001_init.sql  0002_tasks_upgrade.sql  0003_tasks_schema.sql  0004_task_sort_order.sql  0005_notes_module.sql  0006_note_folders.sql  0007_checkins.sql  0008_task_tags_column.sql
src-tauri/permissions/: app.json
src-tauri/src/: attachments.rs  db.rs  main.rs  repository.rs  settings.rs
src-tauri/src/services/: mod.rs  recurrence.rs  rollover.rs  timer.rs
src/lib/: api.ts
